valueOf & parseInt & Integer的一些简单方法